--- a/DataSteward/DataStewardInvitation.html
+++ b/DataSteward/DataStewardInvitation.html
@@ -405,7 +405,7 @@ $(document).ready(function () {
 <p>The detailed programme can be found <a href="./DataTrieste2019Programme/Timetable.html">here</a>.</p>
 <p>There is space for 5 students who wish to take the Data Steward strand. Students wishing to attend this strand will need to cover their accomodation and travel expenses to the school but there are no registration fees.</p>
 <p>As this is a pilot students attending this strand will be interviewed afterwards to get feedback to improve the curriculum.</p>
-<p>Candidates interested in attending should contact the director of the Pilot strnd, <a href="mailto://hugh.shanahan@rhul.ac.uk">Hugh Shanahan</a> before June 1.</p>
+<p>Candidates interested in attending should contact the director of the Pilot strand, <a href="mailto://hugh.shanahan@rhul.ac.uk">Hugh Shanahan</a> before June 1.</p>
 
 
 
