--- a/DataSteward/index.html
+++ b/DataSteward/index.html
@@ -401,12 +401,13 @@ $(document).ready(function () {
 <li>Linked data</li>
 </ul>
 <p>The first week of the school will be for both Early Career Reseachers (ECR’s) and Data Stewards. The seocnd week will break into two parallel strands, one focussing on Data Science techniques for ECR’s and the other for Data Stewards.</p>
-<p>The detailed programme can be found <a href="./DataTrieste2019Programme/Timetable.html">here</a> with a breakdown of the shared and separate courses.</p>
+<p>The provisional detailed programme can be found <a href="./DataTrieste2019Programme/Timetable.html">here</a> with a breakdown of the shared and separate courses.</p>
 <p>Graduate students or ECR’s considering a career in Data Stewardship and Early Career Data Stewards would benefit most from this school.</p>
 <p>This school is a part of a planned series of CODATA-RDA schools that will run in Europe as part of the <a href="https://www.fairsfair.eu">FAIRsFAIR initiative</a>.</p>
 <p>There is space for 5 students who wish to take the Data Steward strand. Students wishing to attend this strand will need to cover their accomodation and travel expenses to the school but there are no registration fees. Single rooms at the Adriatico start at €50 per night.</p>
 <p>As this is a pilot students attending this strand will be interviewed afterwards to get feedback to improve the curriculum.</p>
 <p>Candidates interested in attending should contact the director of the Data Steward strand, <a href="mailto://hugh.shanahan@rhul.ac.uk">Hugh Shanahan</a> before June 1.</p>
+<p><em>This document was created on Tue May 14 2019</em></p>
 
 
 
