--- a/agb/index.html
+++ b/agb/index.html
@@ -49,31 +49,88 @@
       <div id="navbar-menu" class="navbar-menu is-static">
 
         <div class="navbar-end">
-          <a href="/about" class="navbar-item is-secondary">
-            About
-          </a>
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
-              The Schools
+              About
             </a>
 
             <div class="navbar-dropdown">
+              <a href="/about/about-us" class="navbar-item">
+                About Us
+              </a>
+              <a href="/about/codata-rda" class="navbar-item">
+                CODATA-RDA Initiative
+              </a>
+              <a href="/about/members" class="navbar-item">
+                Members
+              </a>
+            </div>
+          </div>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Schools
+            </a>
+
+            <div class="navbar-dropdown">
+              <a href="/schools/history" class="navbar-item">
+                History
+              </a>
+              <a href="/schools/upcoming" class="navbar-item">
+                Upcoming Schools
+              </a>
               <a href="/schools/motivation" class="navbar-item">
-                Motivation
+                Audience
               </a>
               <a href="/schools/reproducing-the-school" class="navbar-item">
                 Reproducing the School
               </a>
-              <a href="/schools/history" class="navbar-item">
-                History
+              <a href="https://github.com/CODATA-RDA-DataScienceSchools/Materials" class="navbar-item">
+                Materials
               </a>
-              <a href="/schools/curriculum" class="navbar-item">
-                The Current Curriculum
+              <a href="/schools/testimonials" class="navbar-item">
+                Alumni Testimonials
+              </a>
+            </div>
+          </div>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Get Involved
+            </a>
+
+            <div class="navbar-dropdown">
+              <a href="/get-involved/become-an-instructor" class="navbar-item">
+                Become an Instructor
+              </a>
+              <a href="/get-involved/become-a-helper" class="navbar-item">
+                Become a Helper
+              </a>
+              <a href="https://drive.google.com/file/d/1bL2WhHzMeIzH9OBaEqWMA0t3x-fsysB9/view?usp=sharing" class="navbar-item">
+                Become a Future Host
+              </a>
+              <a href="/get-involved/become-a-supporter" class="navbar-item">
+                Become a Supporter (donate)
+              </a>
+            </div>
+          </div>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Blog
+            </a>
+
+            <div class="navbar-dropdown">
+              <a href="/blog/news" class="navbar-item">
+                Latest News
+              </a>
+              <a href="/blog/tech" class="navbar-item">
+                Tech Articles
               </a>
             </div>
           </div>
           <a href="/partners" class="navbar-item is-secondary">
             Partners
+          </a>
+          <a href="/acknowledgements" class="navbar-item is-secondary">
+            Acknowledgements
           </a>
         </div>
       </div>
@@ -99,31 +156,88 @@
     <div id="cloned-navbar-menu" class="navbar-menu is-fixed">
 
       <div class="navbar-end">
-        <a href="/about" class="navbar-item is-secondary">
-          About
-        </a>
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
-            The Schools
+            About
           </a>
 
           <div class="navbar-dropdown">
+            <a href="/about/about-us" class="navbar-item">
+              About Us
+            </a>
+            <a href="/about/codata-rda" class="navbar-item">
+              CODATA-RDA Initiative
+            </a>
+            <a href="/about/members" class="navbar-item">
+              Members
+            </a>
+          </div>
+        </div>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Schools
+          </a>
+
+          <div class="navbar-dropdown">
+            <a href="/schools/history" class="navbar-item">
+              History
+            </a>
+            <a href="/schools/upcoming" class="navbar-item">
+              Upcoming Schools
+            </a>
             <a href="/schools/motivation" class="navbar-item">
-              Motivation
+              Audience
             </a>
             <a href="/schools/reproducing-the-school" class="navbar-item">
               Reproducing the School
             </a>
-            <a href="/schools/history" class="navbar-item">
-              History
+            <a href="https://github.com/CODATA-RDA-DataScienceSchools/Materials" class="navbar-item">
+              Materials
             </a>
-            <a href="/schools/curriculum" class="navbar-item">
-              The Current Curriculum
+            <a href="/schools/testimonials" class="navbar-item">
+              Alumni Testimonials
+            </a>
+          </div>
+        </div>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Get Involved
+          </a>
+
+          <div class="navbar-dropdown">
+            <a href="/get-involved/become-an-instructor" class="navbar-item">
+              Become an Instructor
+            </a>
+            <a href="/get-involved/become-a-helper" class="navbar-item">
+              Become a Helper
+            </a>
+            <a href="https://drive.google.com/file/d/1bL2WhHzMeIzH9OBaEqWMA0t3x-fsysB9/view?usp=sharing" class="navbar-item">
+              Become a Future Host
+            </a>
+            <a href="/get-involved/become-a-supporter" class="navbar-item">
+              Become a Supporter (donate)
+            </a>
+          </div>
+        </div>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Blog
+          </a>
+
+          <div class="navbar-dropdown">
+            <a href="/blog/news" class="navbar-item">
+              Latest News
+            </a>
+            <a href="/blog/tech" class="navbar-item">
+              Tech Articles
             </a>
           </div>
         </div>
         <a href="/partners" class="navbar-item is-secondary">
           Partners
+        </a>
+        <a href="/acknowledgements" class="navbar-item is-secondary">
+          Acknowledgements
         </a>
       </div>
     </div>
@@ -171,12 +285,12 @@
             </div>
             <ul class="link-list">
               <li>
-                <a href="/about#what-is">
+                <a href="/about/about-us#what-is">
                   What is the School of Research Data Science?
                 </a>
               </li>
               <li>
-                <a href="/about#our-mission">
+                <a href="/about/about-us/#our-mission">
                   Our Mission
                 </a>
               </li>
@@ -209,12 +323,12 @@
             </div>
             <ul class="link-list">
               <li>
-                <a href="/blog/first">
+                <a href="/blog/news">
                   Latest news
                 </a>
               </li>
               <li>
-                <a href="/blog/second">
+                <a href="/blog/techs">
                   Tech articles
                 </a>
               </li>
