--- a/partners/index.html
+++ b/partners/index.html
@@ -3,9 +3,8 @@
   <head>
     
 
-<meta property="og:title" content="Partners" />
-<meta property="og:description" content="RDA and CODATA 
-The RDA and CODATA are leading international organisations aiming to facilitate research data sharing and accessibility. CODATA, established 40 years ago, works to improve the accessibility to data of importance to all fields of science and technology and has a long track record in working with Developing World countries. They develop policy recommendations to enhance data sharing and re-use, promote good data practices, explores frontier issues in data science and advances education and training in data skills." />
+<meta property="og:title" content="Under Construction" />
+<meta property="og:description" content="Comming Soon." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://something-fresh.org/partners/" />
 
@@ -50,31 +49,88 @@ The RDA and CODATA are leading international organisations aiming to facilitate 
       <div id="navbar-menu" class="navbar-menu is-static">
 
         <div class="navbar-end">
-          <a href="/about" class="navbar-item is-secondary">
-            About
-          </a>
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
-              The Schools
+              About
             </a>
 
             <div class="navbar-dropdown">
+              <a href="/about/about-us" class="navbar-item">
+                About Us
+              </a>
+              <a href="/about/codata-rda" class="navbar-item">
+                CODATA-RDA Initiative
+              </a>
+              <a href="/about/members" class="navbar-item">
+                Members
+              </a>
+            </div>
+          </div>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Schools
+            </a>
+
+            <div class="navbar-dropdown">
+              <a href="/schools/history" class="navbar-item">
+                History
+              </a>
+              <a href="/schools/upcoming" class="navbar-item">
+                Upcoming Schools
+              </a>
               <a href="/schools/motivation" class="navbar-item">
-                Motivation
+                Audience
               </a>
               <a href="/schools/reproducing-the-school" class="navbar-item">
                 Reproducing the School
               </a>
-              <a href="/schools/history" class="navbar-item">
-                History
+              <a href="https://github.com/CODATA-RDA-DataScienceSchools/Materials" class="navbar-item">
+                Materials
               </a>
-              <a href="/schools/curriculum" class="navbar-item">
-                The Current Curriculum
+              <a href="/schools/testimonials" class="navbar-item">
+                Alumni Testimonials
+              </a>
+            </div>
+          </div>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Get Involved
+            </a>
+
+            <div class="navbar-dropdown">
+              <a href="/get-involved/become-an-instructor" class="navbar-item">
+                Become an Instructor
+              </a>
+              <a href="/get-involved/become-a-helper" class="navbar-item">
+                Become a Helper
+              </a>
+              <a href="https://drive.google.com/file/d/1bL2WhHzMeIzH9OBaEqWMA0t3x-fsysB9/view?usp=sharing" class="navbar-item">
+                Become a Future Host
+              </a>
+              <a href="/get-involved/become-a-supporter" class="navbar-item">
+                Become a Supporter (donate)
+              </a>
+            </div>
+          </div>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Blog
+            </a>
+
+            <div class="navbar-dropdown">
+              <a href="/blog/news" class="navbar-item">
+                Latest News
+              </a>
+              <a href="/blog/tech" class="navbar-item">
+                Tech Articles
               </a>
             </div>
           </div>
           <a href="/partners" class="navbar-item is-secondary">
             Partners
+          </a>
+          <a href="/acknowledgements" class="navbar-item is-secondary">
+            Acknowledgements
           </a>
         </div>
       </div>
@@ -100,31 +156,88 @@ The RDA and CODATA are leading international organisations aiming to facilitate 
     <div id="cloned-navbar-menu" class="navbar-menu is-fixed">
 
       <div class="navbar-end">
-        <a href="/about" class="navbar-item is-secondary">
-          About
-        </a>
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
-            The Schools
+            About
           </a>
 
           <div class="navbar-dropdown">
+            <a href="/about/about-us" class="navbar-item">
+              About Us
+            </a>
+            <a href="/about/codata-rda" class="navbar-item">
+              CODATA-RDA Initiative
+            </a>
+            <a href="/about/members" class="navbar-item">
+              Members
+            </a>
+          </div>
+        </div>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Schools
+          </a>
+
+          <div class="navbar-dropdown">
+            <a href="/schools/history" class="navbar-item">
+              History
+            </a>
+            <a href="/schools/upcoming" class="navbar-item">
+              Upcoming Schools
+            </a>
             <a href="/schools/motivation" class="navbar-item">
-              Motivation
+              Audience
             </a>
             <a href="/schools/reproducing-the-school" class="navbar-item">
               Reproducing the School
             </a>
-            <a href="/schools/history" class="navbar-item">
-              History
+            <a href="https://github.com/CODATA-RDA-DataScienceSchools/Materials" class="navbar-item">
+              Materials
             </a>
-            <a href="/schools/curriculum" class="navbar-item">
-              The Current Curriculum
+            <a href="/schools/testimonials" class="navbar-item">
+              Alumni Testimonials
+            </a>
+          </div>
+        </div>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Get Involved
+          </a>
+
+          <div class="navbar-dropdown">
+            <a href="/get-involved/become-an-instructor" class="navbar-item">
+              Become an Instructor
+            </a>
+            <a href="/get-involved/become-a-helper" class="navbar-item">
+              Become a Helper
+            </a>
+            <a href="https://drive.google.com/file/d/1bL2WhHzMeIzH9OBaEqWMA0t3x-fsysB9/view?usp=sharing" class="navbar-item">
+              Become a Future Host
+            </a>
+            <a href="/get-involved/become-a-supporter" class="navbar-item">
+              Become a Supporter (donate)
+            </a>
+          </div>
+        </div>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Blog
+          </a>
+
+          <div class="navbar-dropdown">
+            <a href="/blog/news" class="navbar-item">
+              Latest News
+            </a>
+            <a href="/blog/tech" class="navbar-item">
+              Tech Articles
             </a>
           </div>
         </div>
         <a href="/partners" class="navbar-item is-secondary">
           Partners
+        </a>
+        <a href="/acknowledgements" class="navbar-item is-secondary">
+          Acknowledgements
         </a>
       </div>
     </div>
@@ -135,26 +248,12 @@ The RDA and CODATA are leading international organisations aiming to facilitate 
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title section-title">Partners</h1>
+        <h1 class="title section-title">Under Construction</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
       </div>
     </div>
-    <p><a id="partners-rda"><h3 class="title is-3">RDA and CODATA</h3>
-</a></p>
-<p>The RDA and CODATA are leading international organisations aiming to facilitate
-research data sharing and accessibility.  CODATA, established 40 years ago,
-works to improve the accessibility to data of importance to all fields of
-science and technology and has a long track record in working with Developing
-World countries.  They develop policy recommendations to enhance data sharing
-and re-use, promote good data practices, explores frontier issues in data
-science and advances education and training in data skills.  The RDA,
-established in 2013, is a global, community-driven organisation of over 9000
-members from 137 countries whose mission is to build the social and technical
-bridges that enable open sharing of data by providing a platform to drive
-innovation surrounding data sharing and interoperability.  It has a vision of
-researchers and innovators openly sharing data across technologies, disciplines
-and countries to address the grand challenges of society.</p>
+    <p>Comming Soon.</p>
 
   </div>
 </section>
@@ -178,12 +277,12 @@ and countries to address the grand challenges of society.</p>
             </div>
             <ul class="link-list">
               <li>
-                <a href="/about#what-is">
+                <a href="/about/about-us#what-is">
                   What is the School of Research Data Science?
                 </a>
               </li>
               <li>
-                <a href="/about#our-mission">
+                <a href="/about/about-us/#our-mission">
                   Our Mission
                 </a>
               </li>
@@ -216,12 +315,12 @@ and countries to address the grand challenges of society.</p>
             </div>
             <ul class="link-list">
               <li>
-                <a href="/blog/first">
+                <a href="/blog/news">
                   Latest news
                 </a>
               </li>
               <li>
-                <a href="/blog/second">
+                <a href="/blog/techs">
                   Tech articles
                 </a>
               </li>
