--- a/about/about-us/index.html
+++ b/about/about-us/index.html
@@ -3,14 +3,15 @@
   <head>
     
 
-<meta property="og:title" content="History" />
-<meta property="og:description" content="The School’s Progress 
-The first of the schools ran in August 2016 at the International Centre for Theoretical Physics (ICTP) in Trieste, Italy. It was a huge success, delivering the school to 67 students from over 30 countries. The second school, also based at ICTP, in July 2017 was a similar success, with an additional advanced school in the week following it.
+<meta property="og:title" content="About Us" />
+<meta property="og:description" content="What is the School of Research Data Science? 
+A programme of short courses equipping young researchers globally with core data skills.
 
-Pictures from the First School
-[Day 2]" />
+Our schools provide young researchers with the core skills that will allow them to be more effective and efficient in the work they do, to analyse the data at their disposal and to take advantage of the emerging culture of Open Science.
+
+The primary goal of the Research Data Science School is to teach foundational Data Science skills to Early Career Researchers in LMICs, with a related goal of regionalizing training capacity by growing a community of alumni, instructors, classroom helpers, and hosting institutions." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://something-fresh.org/schools/history/" />
+<meta property="og:url" content="http://something-fresh.org/about/about-us/" />
 
 
 
@@ -252,61 +253,54 @@ Pictures from the First School
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title section-title">History</h1>
+        <h1 class="title section-title">About Us</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
       </div>
     </div>
-    <p><a id="school-progress"><h3 class="title is-3">The School’s Progress</h3>
+    <p><a id="what-is"><h3 class="title is-3">What is the School of Research Data Science?</h3>
 </a></p>
-<p>The first of the schools ran in August 2016 at the International Centre for
-Theoretical Physics (ICTP) in Trieste, Italy.  It was a huge success,
-delivering the school to 67 students from over 30 countries.  The second
-school, also based at ICTP, in July 2017 was a similar success, with an
-additional advanced school in the week following it.</p>
+<p>A programme of short courses equipping young researchers globally with core
+data skills.</p>
 <p><br /></p>
-<p><strong>Pictures from the First School</strong></p>
-<p><a href="https://www.flickr.com/photos/145909074@N04/albums/72157671047081150">[Day 2]</a></p>
-<p><a href="https://www.flickr.com/photos/145909074@N04/albums/72157672160244295">[Day 3]</a></p>
-<p><a href="https://www.flickr.com/photos/145909074@N04/albums/72157669132960603">[Day 4a]</a></p>
-<p><a href="https://www.flickr.com/photos/145909074@N04/albums/72157669133025113">[Day 4b]</a></p>
-<p><a href="https://www.flickr.com/photos/145909074@N04/albums/72157672069992116">[Day 5]</a></p>
-<p><a href="https://www.flickr.com/photos/145909074@N04/albums/72157671368493482/with/28278230344/">[Day 6]</a></p>
-<p><a href="https://www.flickr.com/photos/145909074@N04/albums/72157671368407182">[Group Photos]</a></p>
-<p><a href="https://www.flickr.com/photos/145909074@N04/albums/72157672160577535">[Dinner]</a></p>
+<p>Our schools provide young researchers with the core skills that will allow them
+to be more effective and efficient in the work they do, to analyse the data at
+their disposal and to take advantage of the emerging culture of Open Science.</p>
 <p><br /></p>
-<p>In December 2017, the first regionally run example of the schools was held in
-São Paulo, Brazil with 30 students attending from South and Central America.
-This represented an important step as roughly half of the material was
-delivered by instructors from the region, demonstrating a mechanism for how the
-schools will grow in the future.  In 2018 schools ran in Trieste, São Paulo and
-Kigali, Rwanda – the first African school.  In 2019 three schools ran in Addis
-Ababa, Ethiopia, Trieste and San José, Costa Rica.  In 2020 a school ran in
-Pretoria, South Africa and the 5th year of hosting schools will be kicked off
-in August with the 5th annual Trieste event.  Trieste 2020 will be the 11th
-school and by then approximately 500 students will have completed schools on
-five continents.  This corresponds to roughly USD 600k worth of teaching.  It
-is remarkable that all of this so far has been achieved using an entirely
-volunteer network.</p>
+<p>The primary goal of the Research Data Science School is to teach foundational
+Data Science skills to Early Career Researchers in LMICs, with a related goal
+of regionalizing training capacity by growing a community of alumni,
+instructors, classroom helpers, and hosting institutions. This
+train-the-trainer approach and growing community of regional trainers reduces
+the cost of the events for the local hosting institutions and increases the
+number of events that can be run.</p>
 <p><br /></p>
-<p><a id="school-history"><h3 class="title is-3">Previous Schools</h3>
+<iframe src="https://player.vimeo.com/video/299263596" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen=""></iframe>
+<p><br /></p>
+<p><a id="our-aim"><h3 class="title is-3">Our Aim</h3>
+</a>
+Our strategic priority, shared by CODATA and the Research Data Alliance, is to
+build capacity and to develop skills, training young researchers in the
+principles of Research Data Science.  It is also important that Open Data and
+Open Science benefit research in Low and Middle Income Countries (LMICs) and do
+not result in even greater inequalities in research and scientific output.  On
+the contrary, it has been argued that the ‘Data Revolution’ provides a notable
+opportunity for reducing research inequality in a number of respects.  For this
+reason, particular attention is paid to the needs of young researchers in
+LMICs.</p>
+<p><br /></p>
+<p><a id="our-mission"><h3 class="title is-3">Our Mission</h3>
 </a></p>
 <ul>
-<li><a href="https://www.dirisa.ac.za/CODATA-RDA%20ResearchDataSummerSchool-2020/">#DataPretoria2020, University of Pretoria, Pretoria, 13- 24 January 2020</a></li>
-<li><a href="http://www.codata.org/working-groups/research-data-science-summer-schools/san-jose-2019">#DataSanJosé19, Centro Nacional de Alta Tecnología (CeNAT), San José, 2-13 December 2019</a></li>
-<li><a href="http://www.codata.org/working-groups/research-data-science-summer-schools/advanced-workshops-2019">Advanced Workshop 2019, ICTP, Trieste, 19-23 August 2019</a></li>
-<li><a href="http://www.codata.org/working-groups/research-data-science-summer-schools/data-steward-school-2019">Data Steward School 2019, ICTP, Trieste, 5-16 August 2019</a></li>
-<li><a href="http://www.codata.org/working-groups/research-data-science-summer-schools/datatrieste-2019">#DataTrieste 2019, ICTP, Trieste, 5-16 August 2019</a></li>
-<li><a href="http://www.codata.org/working-groups/research-data-science-summer-schools/addis-ababa-2019">Addis Ababa 2019, Addis Ababa University, Ethiopia, 17-28 June 2019</a></li>
-<li><a href="http://www.codata.org/working-groups/research-data-science-summer-schools/brisbane-2018">Research Data Winter School, University of Queensland, Brisbane, Australia, 12–15 June 2018</a></li>
-<li><a href="http://www.codata.org/datatrieste2018">#DataTrieste 2018, CODATA-RDA School of Research Data Science, ICTP, Trieste, 6-17 August 2018</a></li>
-<li><a href="http://www.codata.org/working-groups/research-data-science-summer-schools/2018-research-data-science-applied-workshops">CODATA-RDA Research Data Science Applied Workshops, ICTP, Trieste, 20-24 August 2018</a></li>
-<li><a href="http://www.codata.org/working-groups/research-data-science-summer-schools/kigali-2018">#DataKigali 2018, CODATA-RDA School of Research Data Science, ICTP, Kigali, Rwanda, 22 October-2 November 2018</a></li>
-<li><a href="http://www.codata.org/working-groups/research-data-science-summer-schools/sao-paulo-2018">#DataSaoPaulo 2018, CODATA-RDA School of Research Data Science, ICTP, São Paulo, 3-14 December 2018</a></li>
-<li><a href="http://www.ictp-saifr.org/?page_id=15270" target="_blank">#DataSaoPaulo 2017, CODATA-RDA Research Data Science Summer School, ICTP, São Paulo, 4-15 December 2017</a></li>
-<li><a href="http://www.codata.org/working-groups/research-data-science-summer-schools/2017-research-data-science-applied-workshops">CODATA-RDA Research Data Science Applied Workshops, ICTP, Trieste, 24-28 July 2017</a></li>
-<li><a href="http://www.codata.org/working-groups/research-data-science-summer-schools/2017-codata-rda-school-of-research-data">#DataTrieste 2017, CODATA-RDA Research Data Science Summer School, ICTP, Trieste, 10-21 July 2017</a></li>
-<li><a href="http://www.codata.org/working-groups/research-data-science-summer-schools/first-codata-rda-school-of-research-data-science-ictp-trieste">#DataTrieste 2016, CODATA-RDA Research Data Science Summer School, ICTP, Trieste, 1-12 August 2016</a></li>
+<li>To address a recognised need for Research Data Science Skills
+across disciplines.</li>
+<li>To use and adapt existing materials to create an accredited curriculum that
+is more than the sum of its parts.</li>
+<li>To provide a pathway from a broad introductory course for all researchers.</li>
+<li>To be reproducible: all materials will be online with Open licences.</li>
+<li>To be scalable: emphasis will be placed on Training New Teachers (TNT) and
+building sustainable partnerships.</li>
+<li>To pay particular attention to the needs of early career researchers in MICs.</li>
 </ul>
 
   </div>
