--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
         <div class="column is-4">
           <figure class="testimonial">
             <blockquote>
-              Among the many things that
+              Among the many things that \#dataSanJose19 left me is inspiration to learn/practice more and not stopping until you achieve your goals
             </blockquote>
             <div class="author">
               <img src="/images/illustrations/faces/2.png" alt=""/>
@@ -630,7 +630,7 @@
         <div class="column is-4">
           <figure class="testimonial">
             <blockquote>
-              
+              \#dataTrieste19 was a place to learn a lot and meet amazing and talented people
             </blockquote>
             <div class="author">
               <img src="/images/illustrations/faces/3.png" alt=""/>
