--- a/about/about-us/index.html
+++ b/about/about-us/index.html
@@ -109,7 +109,7 @@ The primary goal of the Research Data Science School is to teach foundational Da
               <a href="/get-involved/become-a-helper" class="navbar-item">
                 Become a Helper
               </a>
-              <a href="https://drive.google.com/file/d/1bL2WhHzMeIzH9OBaEqWMA0t3x-fsysB9/view?usp=sharing" class="navbar-item">
+              <a href="/get-involved/become-a-host" class="navbar-item">
                 Become a Future Host
               </a>
               <a href="/get-involved/become-a-supporter" class="navbar-item">
@@ -216,7 +216,7 @@ The primary goal of the Research Data Science School is to teach foundational Da
             <a href="/get-involved/become-a-helper" class="navbar-item">
               Become a Helper
             </a>
-            <a href="https://drive.google.com/file/d/1bL2WhHzMeIzH9OBaEqWMA0t3x-fsysB9/view?usp=sharing" class="navbar-item">
+            <a href="/get-involved/become-a-host" class="navbar-item">
               Become a Future Host
             </a>
             <a href="/get-involved/become-a-supporter" class="navbar-item">
