--- a/schools/motivation/index.html
+++ b/schools/motivation/index.html
@@ -105,7 +105,7 @@ The ever-increasing volume and variety of data being generated impacts academia 
               <a href="/get-involved/become-a-helper" class="navbar-item">
                 Become a Helper
               </a>
-              <a href="https://drive.google.com/file/d/1bL2WhHzMeIzH9OBaEqWMA0t3x-fsysB9/view?usp=sharing" class="navbar-item">
+              <a href="/get-involved/become-a-host" class="navbar-item">
                 Become a Future Host
               </a>
               <a href="/get-involved/become-a-supporter" class="navbar-item">
@@ -212,7 +212,7 @@ The ever-increasing volume and variety of data being generated impacts academia 
             <a href="/get-involved/become-a-helper" class="navbar-item">
               Become a Helper
             </a>
-            <a href="https://drive.google.com/file/d/1bL2WhHzMeIzH9OBaEqWMA0t3x-fsysB9/view?usp=sharing" class="navbar-item">
+            <a href="/get-involved/become-a-host" class="navbar-item">
               Become a Future Host
             </a>
             <a href="/get-involved/become-a-supporter" class="navbar-item">
