--- a/schools/history/index.html
+++ b/schools/history/index.html
@@ -108,7 +108,7 @@ Pictures from the First School
               <a href="/get-involved/become-a-helper" class="navbar-item">
                 Become a Helper
               </a>
-              <a href="https://drive.google.com/file/d/1bL2WhHzMeIzH9OBaEqWMA0t3x-fsysB9/view?usp=sharing" class="navbar-item">
+              <a href="/get-involved/become-a-host" class="navbar-item">
                 Become a Future Host
               </a>
               <a href="/get-involved/become-a-supporter" class="navbar-item">
@@ -215,7 +215,7 @@ Pictures from the First School
             <a href="/get-involved/become-a-helper" class="navbar-item">
               Become a Helper
             </a>
-            <a href="https://drive.google.com/file/d/1bL2WhHzMeIzH9OBaEqWMA0t3x-fsysB9/view?usp=sharing" class="navbar-item">
+            <a href="/get-involved/become-a-host" class="navbar-item">
               Become a Future Host
             </a>
             <a href="/get-involved/become-a-supporter" class="navbar-item">
